apps/garage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    Prometheus: scrape
