apps/garage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage
  template:
    metadata:
      labels:
        app: garage
    spec:
      containers:
      - name: garage
        image: dxflrs/garage:v2.2.0
        ports:
        - containerPort: 3900
        - containerPort: 3901
        - containerPort: 3902
        - containerPort: 3903
        volumeMounts:
        - name: garage-data
          mountPath: /var/lib/garage/data
        - name: garage-meta
          mountPath: /var/lib/garage/meta
        - name: garage-config
          mountPath: /etc/garage.toml
          subPath: garage.toml
      volumes:
      - name: garage-data
        persistentVolumeClaim:
          claimName: garage-data
      - name: garage-meta
        persistentVolumeClaim:
          claimName: garage-meta-zfs
      - name: garage-config
        secret:
          secretName: garage-config
---
apiVersion: v1
kind: Service
metadata:
  name: garage
spec:
  selector:
    app: garage
  ports:
    - protocol: TCP
      name: s3
      port: 3900
      targetPort: 3900
    - protocol: TCP
      name: rpc
      port: 3901
      targetPort: 3901
    - protocol: TCP
      port: 3902
      targetPort: 3902
      name: web
    - protocol: TCP
      port: 3903
      targetPort: 3903
      name: admin
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  rules:
  - host: garage.ugard.win
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 3900
  tls:
  - hosts:
    - garage.ugard.win
    secretName: tls-garage-ingress-http
